productItem and data

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -18,3 +18,9 @@ a {
 * {
   box-sizing: border-box;
 }
+.card {
+  @apply mb-5 block border border-gray-200 rounded-lg shadow-md;
+}
+.primary-button {
+  @apply bg-amber-300 py-2 px-4 shadow outline-none hover:bg-amber-400 active:bg-amber-500;
+}
