--- a/styles/globals.css
+++ b/styles/globals.css
@@ -34,3 +34,9 @@ textarea {
 .dropdown-link {
   @apply flex p-2 hover:text-gray-200;
 }
+.alert-error {
+  @apply my-3 rounded-lg bg-red-100 text-red-700 p-3;
+}
+.alert-success {
+  @apply my-3 rounded-lg bg-green-100 text-green-700 p-3;
+}
